--- a/views/about.pug
+++ b/views/about.pug
@@ -8,7 +8,7 @@ block content
       .cell.small-6.medium-9.large-9
 
         //- Add your name.
-        h1 Name
+        h1 Ryan Emslie
 
         //- Feel free personalize the title below
         p.lead.text-light
@@ -25,12 +25,16 @@ block content
 
         //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
         ul
-          li Express
-          li Other cool stuff
-          li Listing my skills
-          li Etc.
-          li Etc. 
-          li Etc.
+          li HTML / CSS
+          li JavaScript
+          li jQuery
+          li Node.JS
+          li React 
+          li Pug
+          li SaSS
+          li SQL
+          li Mongoose
+          li Gulp
         h6 Contact Info
 
         //- Add your own contact info
