--- a/views/about.pug
+++ b/views/about.pug
@@ -7,28 +7,24 @@ block content
     .grid-x
       .cell.small-6.medium-9.large-9
 
-        //- Add your name.
         h1 Ryan Emslie
 
-        //- Feel free personalize the title below
         p.lead.text-light
-          | Full Stack JavaScript Developer.
+          | Full Stack JavaScript Developer - Problem Solver
 
-        //- Replace the boilerplate below with your Elevator pitch below.
         .portfolio-bio
           p
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
-            | This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position.
+            | I am a Full Stack JavaScript Developer living in Gainesville, Florida. I am a proven problem solver and live long learner with wide range of business and development skills.  Prior to becoming a Developer, I worked as a Geologist and an Educational Developer.
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
-        //- Replace the text in the li tags below with your own skills.  At this point, you should be able to list at least ten skills.
+
         ul
           li HTML / CSS
           li JavaScript
           li jQuery
           li Node.JS
+          li Express
           li React 
           li Pug
           li SaSS
@@ -37,15 +33,17 @@ block content
           li Gulp
         h6 Contact Info
 
-        //- Add your own contact info
         ul
-          li 555-555-1234
-          li email@email.com
+          li 352-219-3450
+          li ryan.emslie@gmail.com
+          li 
+            a(href='https://twitter.com/RTEmslie') ryanemslie.com
 
-        //- Add URLs to the hrefs below to link to your social media accounts.
-        a.button.expanded(href='') LinkedIn
-        a.button.expanded(href='') GitHub
-        a.button.expanded(href='') Twitter
+
+        a.button.expanded.linkedin(href='https://www.linkedin.com/in/ryan-emslie/') LinkedIn
+        a.button.expanded.github(href='https://github.com/RyanEmslie') GitHub
+        a.button.expanded.twitter(href='https://twitter.com/RTEmslie') Twitter
+
   nav.grid-container.portfolio-breadcrumb
     a(href='/') ← Back
   
