--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,8 +6,10 @@ html(class="no-js" lang="en" dir="ltr")
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     title Ryan Emslie - Full Stack Developer
     link(href='https://fonts.googleapis.com/css?family=Merriweather:300,400,400i,700,800', rel='stylesheet')
+    <link href="https://fonts.googleapis.com/css?family=Permanent+Marker" rel="stylesheet">
     link(rel='stylesheet', href='/css/foundation.css')
     link(rel='stylesheet', href='/css/style.css')
+    link(rel='stylesheet', href='/css/background.css')
   body
     #my-info.off-canvas.position-left.reveal-for-large.portfolio-me(data-off-canvas='')
       .grid-y.grid-padding-x(style='height: 100%;')
@@ -17,22 +19,18 @@ html(class="no-js" lang="en" dir="ltr")
             img.thumbnail(src='/images/profile.png')
           .cell.auto
 
-            //- Add your name here.
             h5 Ryan Emslie
 
-            //- Add text here to describe who you are, what you do, and why you are so aweome.
             p.text-light
-              | Descritption
-
-            //- Add about page route to the href below. 
-            a(href='/about') Learn More →
+              | I am a Full Stack JavaScript Developer living in Gainesville, Florida.     
+ 
+            a(href='/about') About Me! →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
         .title-bar-left
           button.menu-icon(type='button', data-toggle='my-info')
 
-          //- Add your name here.  This is for the mobile screen sized version.
           span.title-bar-title Ryan Emslie
       block content
         
