--- a/views/error.pug
+++ b/views/error.pug
@@ -4,3 +4,7 @@ block content
   h1= message
   h2= error.status
   pre #{error.stack}
+
+        //- I added a back button to the page
+  nav.grid-container.portfolio-breadcrumb
+    a(href='/') ← Back
