--- a/views/about.pug
+++ b/views/about.pug
@@ -37,7 +37,7 @@ block content
           li 352-219-3450
           li ryan.emslie@gmail.com
           li 
-            a(href='https://twitter.com/RTEmslie') ryanemslie.com
+            a(href='https://ryanemslie.com') ryanemslie.com
 
 
         a.button.expanded.linkedin(href='https://www.linkedin.com/in/ryan-emslie/') LinkedIn
