--- a/public/css/background.css
+++ b/public/css/background.css
@@ -14,7 +14,7 @@
 
 
 h1 {
-  font-family: "Permanent Marker";
+  font-family: "Arial";
   text-shadow: 2px 2px 2px #000;
   color: #bedce9;
   font-size: 80px;
