--- a/views/about.pug
+++ b/views/about.pug
@@ -14,7 +14,7 @@ block content
 
         .portfolio-bio
           p
-            | I am a Full Stack JavaScript Developer living in Gainesville, Florida. I am a proven problem solver and live long learner with wide range of business and development skills.  Prior to becoming a Developer, I worked as a Geologist and an Educational Developer.
+            | I am a Full Stack JavaScript Developer living in Gainesville, Florida. I am a proven problem solver and life long learner with wide range of business and development skills.  Prior to becoming a Developer, I worked as a Geologist and an Educational Developer.
       .cell.portfolio-meta.small-6.medium-2.large-3
         h6 Skills
 
@@ -22,15 +22,16 @@ block content
         ul
           li HTML / CSS
           li JavaScript
-          li jQuery
+          li JSX
           li Node.JS
           li Express
           li React 
-          li Pug
-          li SaSS
-          li SQL
+          li Create-React-App
+          li Sqlite
+          li MongoDB
           li Mongoose
-          li Gulp
+          li Pug
+          li Heroku
         h6 Contact Info
 
         ul
@@ -38,6 +39,7 @@ block content
           li ryan.emslie@gmail.com
           li 
             a(href='https://ryanemslie.com') ryanemslie.com
+          
 
 
         a.button.expanded.linkedin(href='https://www.linkedin.com/in/ryan-emslie/') LinkedIn
