--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,9 +22,9 @@ html(class="no-js" lang="en" dir="ltr")
             h5 Ryan Emslie
 
             p.text-light
-              | I am a Full Stack JavaScript Developer living in Gainesville, Florida.     
+              | I am a JavaScript Developer living in Gainesville, Florida.     
  
-            a(href='/about') About Me! →
+            a.about-class(href='/about') About Me! →
 
     .off-canvas-content(data-off-canvas-content='')
       .title-bar.hide-for-large
