--- a/views/index.pug
+++ b/views/index.pug
@@ -16,7 +16,7 @@ block content
       h1 Portfolio
  
       p.lead.text-light
-        | This is a sample of the types of projects that I have completed while studying the JavaScript Full Stack Development track at Treehouse.  Please check back for my latest work...
+        | This is a sample of the types of projects that I have completed while studying the JavaScript Full Stack Development track at Treehouse.  Moving forward, I plan on focusing on more front-end React/Typescript/Express projects.  Please check back for my latest work...
   article.grid-container.portfolio-index
     
     .grid-x.grid-margin-x.small-up-2.medium-up-2.large-up-3
